# infrastructure

./: pyproject.toml
auth/: docker-compose.yml
gateway/: docker-compose.yml  traefik.yml
orchestrator/: docker-compose.yml
