[project]
name = "infrastructure"
version = "0.1.0"
description = ""
authors = [
    {name = "MouchrifAyoub",email = "ayoub.mouchrif-ext@um6p.ma"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "tenacity (>=9.1.2,<10.0.0)",
    "dynaconf (>=3.2.10,<4.0.0)",
    "json-log-formatter (>=1.1.1,<2.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "common @ file:///home/ayoub/common"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
